--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
+                        <a class="nav-link" href="#">Blog Post</a>
                     </li>
                 </ul>
             </div>
