--- a/Solve.html
+++ b/Solve.html
@@ -32,14 +32,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/Index.html" />
 
                         Home
                         <a href="#" Portfolio />
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Solve.html">Solve</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Solve</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Code</a>
@@ -61,7 +61,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col align-content-center text-primary"><em><h1>Palindrome Challenge</h1></em></div>
+                <div class="col align-content-center text-primary"><h1>Palindrome Challenge</h1></div>
                 <div class="col align-items-md-center"></div>
                 <p class="text-dark">A <strong>palindrome</strong> is a word, phrase, number or sequence of words that reads the same whether one reads it forward (left-to-right) or backwards (right-to-left). The most common of English palindromes are those that are read character by character, for instance, "Mom", "level," "rotor," and "racecar". Character by character means that each character of the word matches and the word can be spelled the same forwards or backward. The word palindrome is derived from the Greek 'palin,' or "back" and 'dromos' or "direction." The actual Greek phrase alluded to the backward movement of the crab.</p>
                 <p class="text-dark">This page is a Javascript exercise designed to develop the ability to work with data and detect hidden patterns. Specifically, this code evaluates whether a given set of data (letters, numbers, or combination) has the same sequence whether it is read right-left or left-right.</p>
