--- a/Solve.html
+++ b/Solve.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary static-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent static-top">
         <div class="container">
             <a><img class="navbar-brand" src="Images/favicon-32x32.png" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,9 +49,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="//ojolmo-fs-portfolio.netlify.app">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog Post</a>
                     </li>
                 </ul>
             </div>
